--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ layout: default
                     <div class="col-lg-8 col-md-12 col-sm-12"> <img class="animated fadeInLeft" src="{{ post.imagepath }}" alt="" /> </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
                       <div class="rock_event_detail animated fadeInLeft">
-                        <h1>{{ events.title }}</h1>
-                        <p>{{ events.content }}</p>
+                        <h1>{{ event.title }}</h1>
+                        <p>{{ event.content }}</p>
                       </div>
                     </div>
                   </div>
