--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ layout: default
 
                 <div id="tab1" class="rock_event_tab_content">
                   <div class="row">
-                    <div class="col-lg-8 col-md-12 col-sm-12"> <img class="animated fadeInLeft" src="{{ events.imagepath }}" alt="" /> </div>
+                    <div class="col-lg-8 col-md-12 col-sm-12"> <img class="animated fadeInLeft" src="{{ events.image_path }}" alt="" /> </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
                       <div class="rock_event_detail animated fadeInLeft">
                         <h1>{{ events.title }}</h1>
