--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: default
               
                {% for events in site.events %}
 
-                <div id="tab1" class="rock_event_tab_content" style="display: none;">
+                <div id="tab1" class="rock_event_tab_content" >
                   <div class="row">
                     <div class="col-lg-8 col-md-12 col-sm-12"> <img class="animated fadeInLeft" src="{{ events.image_path }}" alt="" /> </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
