--- a/index.html
+++ b/index.html
@@ -196,50 +196,32 @@ layout: default
           <div id="rock_club_photo_slider" class="owl-carousel owl-theme">
             <div class="rock_club_photo_slider_item">
               <div class="rock_club_photo_item"> <img src="images/club/club_image1.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image1.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
+              </div>
+              <div class="rock_club_photo_item"> <img src="images/club/club_image2.jpg" alt="" />
+              </div>
+            </div>
+           <div class="rock_club_photo_slider_item">
+              <div class="rock_club_photo_item"> <img src="images/club/club_image3.jpg" alt="" />
               </div>
               <div class="rock_club_photo_item"> <img src="images/club/club_image4.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image4.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
               </div>
             </div>
             <div class="rock_club_photo_slider_item">
-              <div class="rock_club_photo_item"> <img src="images/club/club_image2.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image2.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
-              </div>
               <div class="rock_club_photo_item"> <img src="images/club/club_image5.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image5.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
-              </div>
-            </div>
-            <div class="rock_club_photo_slider_item">
-              <div class="rock_club_photo_item"> <img src="images/club/club_image3.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image3.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
               </div>
               <div class="rock_club_photo_item"> <img src="images/club/club_image6.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image6.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
               </div>
             </div>
             <div class="rock_club_photo_slider_item">
-              <div class="rock_club_photo_item"> <img src="images/club/club_image2.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image2.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
+              <div class="rock_club_photo_item"> <img src="images/club/club_image7.jpg" alt="" />
               </div>
-              <div class="rock_club_photo_item"> <img src="images/club/club_image4.jpg" alt="" />
-                <div class="rock_club_photo_overlay">
-                  <div class="photo_link animated fadeInDown"> <a href="gallery_3column.html"><i class="fa fa-link"></i></a> <a class="fancybox" data-fancybox-group="group1" href="images/club/club_image4.jpg"><i class="fa fa-search-plus"></i></a> </div>
-                  <a class="rock_club_photo_detail animated fadeInUp" href="">Rock on Dance</a> </div>
+              <div class="rock_club_photo_item"> <img src="images/club/club_image8.jpg" alt="" />
+              </div>
+            </div>
+            <div class="rock_club_photo_slider_item">
+              <div class="rock_club_photo_item"> <img src="images/club/club_image9.jpg" alt="" />
+              </div>
+              <div class="rock_club_photo_item"> <img src="images/club/club_image10.jpg" alt="" />
               </div>
             </div>
           </div>
