--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ layout: default
         <div class="rock_page_title">
           <div class="rock_heading_div">
             <div class="rock_heading">
-              <h1>Rockon Club Photos</h1>
+              <h1>Royal Lounge Club Photos</h1>
               <p>X</p>
             </div>
           </div>
@@ -230,7 +230,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="rockon_section" data-target="rockon_booking" id="rockon_booking" ><a data-link="rockon_booking">
+  <div class="rockon_section" data-target="rockon_booking" id="rockon_booking" >
     <div class="container-fluid">
       <div class="rock_page_title">
         <div class="container">
@@ -324,7 +324,7 @@ layout: default
         </div>
       </div>
       
-  </a></div>
+  </div>
   <div class="rockon_section" data-target="rockon_about" id="rockon_about">
     
   <div class="rockon_section" data-target="rockon_contact" id="rockon_contact">
@@ -361,16 +361,16 @@ layout: default
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="rock_contact_detail">
                 <div>
-                  <p><i class="fa fa-envelope"></i> <a href="">@envato.com</a></p>
-                  <p><i class="fa fa-mobile"></i> <a href="">+61 3 8376 6284</a></p>
+                  <p><i class="fa fa-envelope"></i> <a href="">info@royalloungeatlanta.com</a></p>
+                  <p><i class="fa fa-mobile"></i> <a href="">404 683 6833</a></p>
                 </div>
                 <div>
-                  <p><i class="fa fa-map-marker"></i> <a href="">PO Box 16122 Collins Street WestVictoria 8007 Australia</a></p>
-                  <p><i class="fa fa-globe"></i> <a href="">ww.themeforest.net</a></p>
+                  <p><i class="fa fa-map-marker"></i> <a href="">2847 Buford Highway Atlanta, GA 30329</a></p>
+                  <p><i class="fa fa-globe"></i> <a href="">ww.royalloungeatlanta.com</a></p>
                 </div>
               </div>
               <div class="rock_map">
-                <iframe class="google-map" src="https://maps.google.sk/maps/ms?msa=0&msid=210946297010027755543.0004c74af772bb9276d33&ie=UTF8&ll=48.576981,19.13117&spn=0,0&t=m&output=embed"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d390.5777711101858!2d-84.34237651662758!3d33.83170334110221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50611b19ab587%3A0xa29ea2e888b9aa68!2s2847+Buford+Hwy+NE%2C+Atlanta%2C+GA+30329!5e0!3m2!1sen!2sus!4v1448250751081" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
