--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-4 rock_service">
+            <div class="col-lg-4 col-md-4 col-sm-4 rock_service" style="margin-bottom:20px">
               <div class="rock_service_icon"> <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="50px" height="50px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
                 <g>
@@ -38,7 +38,7 @@ layout: default
               <h2>Restaurant</h2>
               
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 rock_service">
+            <div class="col-lg-4 col-md-4 col-sm-4 rock_service" style="margin-bottom:20px">>
               <div class="rock_service_icon"> <svg version="1.1" id="Capa_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="50px" height="50px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
                 <g>
@@ -64,7 +64,7 @@ layout: default
               <h2>Night Club</h2>
               
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 rock_service">
+            <div class="col-lg-4 col-md-4 col-sm-4 rock_service" style="margin-bottom:20px">>
               <div class="rock_service_icon"> <svg version="1.1" id="Capa_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="50px" height="50px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
                 <g>
