--- a/index.html
+++ b/index.html
@@ -317,7 +317,23 @@ layout: default
         <div class="rock_contact">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-            <!-- Live Chat Widget powered by https://keyreply.com/chat/ -->
+              <form role="form">
+                <div class="form-group">
+                  <input type="text" class="form-control" id="uname" placeholder="Your First Name">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" id="uemail" placeholder="Your Email">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" id="web_site" placeholder="Your Web site">
+                </div>
+                <div class="form-group">
+                  <textarea rows="10" class="form-control" id="message" placeholder="Your Message"></textarea>
+                </div>
+                <input type="button" id="em_sub" class="btn btn-default btn-lg" value="Submit Your Message">
+                <p id="err"></p>
+              </form>
+              <!-- Live Chat Widget powered by https://keyreply.com/chat/ -->
 <script id="keyreply-script" src="//keyreply.com/chat/widget.js" data-color="#03A9F4" data-apps="JTdCJTIycGhvbmUlMjI6JTIyNDA0JTIwNTkzJTIwODUxMyUyMiwlMjJlbWFpbCUyMjolMjJpbmZvQHJveWFsbG91bmdlYXRsYW50YS5jb20lMjIlN0Q="></script>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
